Add Climate Tips and Take Action pages

--- a/config/locales/views/shared.en.yml
+++ b/config/locales/views/shared.en.yml
@@ -47,3 +47,4 @@ en:
         text: Cookies help us deliver our services. By using our services, you agree to
         link_text: our use of cookies
         cta: I agree
+      read_more: Read more
