--- a/config/locales/views/shared.sv.yml
+++ b/config/locales/views/shared.sv.yml
@@ -47,3 +47,4 @@ sv:
         text: Kakor hjälper oss att leverera våra tjänster. Genom att använda våra tjänster godkänner du
         link_text: vår användning av kakor
         cta: Jag godkänner
+      read_more: Läs mer
