--- a/config/locales/views/welcome.en.yml
+++ b/config/locales/views/welcome.en.yml
@@ -27,14 +27,10 @@ en:
           heading: 100% transparency
           body_text: We want you to feel safe with how your money makes an impact. We continuously update the site with our outgoings, making sure that you know where every cent is used.
           read_more: Read more about our transparency
-        climate_tips:
-          heading: Climate tips
-          clothes_last_longer: Make your clothes last longer
-          reduce_carbon_footprint_food: How to reduce your carbon footprint with food
-          civil_disobedience: Civil disobedience for the climate?
-          climate_friendly_housing_cooperative: Climate friendly housing cooperative - this is how you make an impact
-          climate_friendly_pension_saving: Fossil free pension savings
-          read_more: Read more
+        social_media:
+          heading: GoClimate on social media
+          body_text: Learn more about behavioural and system change, climate justice and actions to take for a better tomorrow.
+          cta: Browse our Instagram feed
         partners: We are proud partners of
         community:
           heading: Meet our community
@@ -69,4 +65,4 @@ en:
         train: Train
         subway: Subway
         boat: Boat
-        offset_the_emissions_here: 'Offset the emissions here'
+        offset_the_emissions_here: 'Offset the emissions'
