--- a/config/locales/views/welcome.sv.yml
+++ b/config/locales/views/welcome.sv.yml
@@ -27,14 +27,10 @@ sv:
           heading: 100% transparens
           body_text: Vi vill att du ska känna dig helt trygg med hur dina pengar gör klimatnytta. Vi redovisar löpande alla våra utgifter här på siten, för att du ska veta exakt hur pengarna används.
           read_more: Läs mer om vår transparens
-        climate_tips:
-          heading: Klimattips
-          clothes_last_longer: Få dina kläder att räcka längre
-          reduce_carbon_footprint_food: Minska ditt klimatavtryck via din mat
-          civil_disobedience: Civil olydnad för klimatet?
-          climate_friendly_housing_cooperative: Klimatsmart bostadsrättsförening - så gör du skillnad
-          climate_friendly_pension_saving: Fossilfritt pensionssparande
-          read_more: Läs mer
+        social_media:
+          heading: GoClimate i sociala medier
+          body_text: Lär dig mer om beteende- och systemförändringar, klimaträttvisa och vad du kan göra för en bättre morgondag.
+          cta: Se vårt Instagram-flöde
         partners: Vi är stolta partners till
         community:
           heading: Lär känna våra medlemmar
@@ -69,4 +65,4 @@ sv:
         train: Tåg
         subway: Tunnelbana
         boat: Båt
-        offset_the_emissions_here: 'Kompensera för utsläppen här'
+        offset_the_emissions_here: 'Kompensera för utsläppen'
