Add link to signing petitions on Climate tips and Take action pages

--- a/config/locales/views/climate_tips.en.yml
+++ b/config/locales/views/climate_tips.en.yml
@@ -56,6 +56,9 @@ en:
           item_2:
             heading: Civil disobedience for the climate?
             link: https://www.goclimate.com/blog/civil-disobedience-for-the-climate/
+          item_3:
+            heading: Signing peitions for the climate
+            link:  https://www.goclimate.com/blog/petitions/
         carbon_footprint:
           heading: Learn more about your carbon footprint
           item_1:
