--- a/config/locales/views/climate_tips.sv.yml
+++ b/config/locales/views/climate_tips.sv.yml
@@ -56,6 +56,8 @@ sv:
           item_2:
             heading: Civil olydnad för klimatet?
             link: https://www.goclimate.com/blog/civil-disobedience-for-the-climate/
+          item_3:
+            heading: Skriv under namninsamlingar för klimatet
         carbon_footprint:
           heading: Mer om ditt klimatavtryck
           item_1:
