--- a/config/locales/views/take_action.en.yml
+++ b/config/locales/views/take_action.en.yml
@@ -32,5 +32,5 @@ en:
         petitions:
           heading: Sign petitions
           text: Supporting different causes by signing petitions can be a very powerful and easy way of creating change. We have collected petitions in different areas, see what  is relevant to you, and get ready to make a difference!
-
+          cta: Active petitions
  
