--- a/config/locales/views/take_action.sv.yml
+++ b/config/locales/views/take_action.sv.yml
@@ -32,5 +32,5 @@ sv:
         petitions:
           heading: Skriv under namninsamlingar
           text: Att stötta olika initiativ genom att underteckna namninsamlingar kan vara ett mycket effektivt och enkelt sätt att skapa förändring. Vi har samlat aktuella namninsamlingar inom olika klimatfrågor, ta gärna en titt för att avgöra vad som är relevant för dig och sätt igång att göra skillnad!
-
+          cta: Aktuella namninsamlingar
  
