--- a/config/locales/devise.views.sv.yml
+++ b/config/locales/devise.views.sv.yml
@@ -111,6 +111,8 @@ sv:
       unlocked: Ditt konto har låsts upp. Du är nu inloggad.
   errors:
     messages:
+      something_wrong: Hoppsan, något blev fel!
+      reset_password_token_expired_html: Din länk för lösenordsåterställning är inte längre giltig. <a href=''>Be om en ny</a>.
       already_confirmed: är redan bekräftad, vänligen logga in igen
       confirmation_period_expired: behöver bekräftas inom %{period}. Vänligen begär en ny
       expired: är inte längre giltig. Vänligen begär en ny
